# RikDataStream-Pro

./: .editorconfig  .gitattributes  Cargo.toml  README.md  app.js  index.html  manifest.json  script.js  style.css  sw.js
.github/workflows/: ci.yml
data/: mock.xml  queries.sql
scripts/: cdn.sh  doc_gen.rb  verify.py
src/: AppModel.java  analytics.cpp
